# Motorsteuerung_Ros

ws12bp_volksbot/: .gitignore  INSTALL  README  tmc200ctrl.doxygen
ws12bp_volksbot/doc/: ai_projektarbeit_schriftl_ausarbeitung.odt
ws12bp_volksbot/doc/diagrams/: libraries_layers_diagram.dia  libtmc200ctrl_io_flowchart.dia  libtmc200ctrl_io_threads.dia  mem_management.dia
ws12bp_volksbot/include/libtmc200ctrl_direct/: libtmc200ctrl_direct.h
ws12bp_volksbot/include/libtmc200ctrl_io/: libtmc200ctrl_io.h  tmc200_commands.h  tmc200_motors.h  tmc200_operation_modes.h  tmc200ctrl_error.h
ws12bp_volksbot/include/libtmc200ctrl_utils/: converters.h  svvaluegroupkeynotfoundexception.h  tmc200cfgxmlparser.h  tmc200cfgxmlparserexception.h  tmc200svfeedbackparser.h  unknowntmc200commandexception.h
ws12bp_volksbot/src/doxygen/: CMakeLists.txt  package.xml
ws12bp_volksbot/src/doxygen/imgs/: libraries_layers_diagram.dia
ws12bp_volksbot/src/examples/: CMakeLists.txt  msg  package.xml  srv  tmc200cfg_expl.xml  tmc200controller.launch
ws12bp_volksbot/src/examples/src/: tmc200ctrl_direct_test.cpp  tmc200ctrl_remote.cpp
ws12bp_volksbot/src/libtmc200ctrl_direct/: CMakeLists.txt  README  include  package.xml
ws12bp_volksbot/src/libtmc200ctrl_direct/src/: libtmc200ctrl_direct.c
ws12bp_volksbot/src/libtmc200ctrl_io/: CMakeLists.txt  README  include  package.xml
ws12bp_volksbot/src/libtmc200ctrl_io/priv_inc/: queues.h  threads_common.h
ws12bp_volksbot/src/libtmc200ctrl_io/src/: libtmc200ctrl_io.c  queues.c  sendtmc200cmdsthread.c  threads_common.c  tmc200feedbackthread.c
ws12bp_volksbot/src/libtmc200ctrl_utils/: CMakeLists.txt  README  include  package.xml
ws12bp_volksbot/src/libtmc200ctrl_utils/src/: converters.cpp  tmc200cfgxmlparser.cpp  tmc200svfeedbackparser.cpp
ws12bp_volksbot/src/tmc200ctrl/: CMakeLists.txt  README  package.xml
ws12bp_volksbot/src/tmc200ctrl/msg/: SENCO.msg  SV.msg  SVREG.msg
ws12bp_volksbot/src/tmc200ctrl/src/: tmc200controller.cpp
ws12bp_volksbot/src/tmc200ctrl/srv/: GENCO.srv  GMDPT.srv  GMODE.srv  GVERS.srv  GVREG.srv
