<?xml version="1.0"?>
<package>
  <name>libtmc200ctrl_utils</name>
  <version>1.0.0</version>
  <description>This library contains utility functions and components related to libtmc200ctrl_direct, ibtmc200ctrl_ros and ibtmc200ctrl_mm.</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="millert@hs-weingarten.de">Tobias Miller</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
	<url type="website">http://zafh-servicerobotik.de</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
	<author email="millert@hs-weingarten.de">Tobias Miller</author>
	
 <buildtool_depend>catkin</buildtool_depend>	
  <run_depend>tinyxml</run_depend>
</package>
