<?xml version="1.0"?>
<package>
  <name>tmc200ctrl</name>
  <version>1.0.0</version>
  <description>Contains a node to control the TMC200 controller via ROS.</description>
  
  <maintainer email="millert@hs-weingarten.de">Tobias Miller</maintainer>
  <license>GPLv2</license>
  <url type="website">http://zafh-servicerobotik.de</url>
  <author email="millert@hs-weingarten.de">Tobias Miller</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libtmc200ctrl_io</run_depend>
</package>
